Header animation overflow issue solved.

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -104,6 +104,7 @@ a {
 body {
   width: 100%;
   background-color: #047a79;
+  overflow: hidden;
 }
 main {
   width: 100%;
